# image_processor_cpp

./: CMakeLists.txt  image_processor.cpp  readme.md
BMP_image/: bmp_image.cpp  bmp_image.h
data_parser/: parser.cpp  parser.h
filters/: filters.cpp  filters.h
pixel/: pixel.cpp  pixel.h
reading_and_writing/: constants.h  reading.cpp  reading.h  writing.cpp  writing.h
